--- a/cloud_portal/front_end/app/web_common/styles/common.scss
+++ b/cloud_portal/front_end/app/web_common/styles/common.scss
@@ -96,6 +96,11 @@ placeholder{ /* Hack to have full-screen */
         font-weight: 300;
         line-height:30px;
         color: $light;
+
+        @include media-breakpoint-down(md) {
+            top: 40%;
+        }
+
         &>*{
             text-align: center;
             margin: auto;
@@ -104,11 +109,24 @@ placeholder{ /* Hack to have full-screen */
         .placeholder-icon{
             margin-bottom: 24px;
         }
+
+        @include media-breakpoint-down(md) {
+            .placeholder-icon {
+                margin-bottom: 5px;
+            }
+        }
     
         .placeholder-title{
             font-size: 40px;
             line-height:48px;
             text-transform: uppercase;
+        }
+
+        @include media-breakpoint-down(md) {
+            .placeholder-title {
+                font-size: 20px;
+                line-height: 24px;
+            }
         }
 
         .placeholder-message{
